--- a/debtgraph.html
+++ b/debtgraph.html
@@ -15,7 +15,7 @@
       <div id="left_panel">
 	<div id="results_area">
 	  <h4>Results</h4>
-	  <p>Under your plan, debt in 2017 will be <span id="score">86%</span> of GDP.</p>
+	  <p>Under your plan, debt held by the public will be <span id="score">86%</span> of GDP in 2026.</p>
 	</div>
 	<div id="slider_area">
 	  <div class="slideContainer">
