--- a/debtgraph.html
+++ b/debtgraph.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <script src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <link rel="stylesheet" href="debtgraph.css">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -49,6 +50,6 @@
     </div>
   </body>
   <!-- local scripts -->
-  <script src="chartdata.js"> </script>
-  <script src="debtgraph.js"> </script>
+  <script type="text/javascript" src="chartdata.js"> </script>
+  <script type="text/javascript" src="debtgraph.js"> </script>
 </html>
