--- a/debtgraph.html
+++ b/debtgraph.html
@@ -16,23 +16,34 @@
       <div id="left_panel">
 	<div id="results_area">
 	  <h4>Results</h4>
-	  <p>Under your plan, debt held by the public will be <span id="score">86%</span> of GDP in 2026.</p>
+	  <p>Under your plan, debt held by the public will be <span id="score">86%</span> <br>
+	    of GDP in 2026.</p>
+	</div>
+	<div id="base settings">
+	  <h4>Base Plan</h4>
+	  <div class="input" id="plan_select_div">
+	    <select id="plan_selector">
+	      <option name="plan" id="radio_curr" selected>Current Law</option>
+	      <option name="plan" id="radio_clinton">Clinton Plan</option>
+	      <option name="plan" id="radio_trump">Trump Plan</option>
+	    </select>
+	  </div>
 	</div>
 	<div id="slider_area">
 	  <div class="slideContainer">
 	    <h3>Spending</h3>
-	    <p>+</p>
+	    <p>+50%</p>
 	    <div id="spending_slider" class="inputSlider"> </div>
-	    <p>-</p>
+	    <p>-50%</p>
 	    <div class="inFieldContainer">
 	      <input type="text" id="spending_in" class="inputField" value="0"/><span>%</span>
 	    </div>
 	  </div>
 	  <div class="slideContainer">
 	    <h3>Revenue</h3>
-	    <p>+</p>
+	    <p>+50%</p>
 	    <div id="revenue_slider" class="inputSlider"> </div>
-	    <p>-</p>
+	    <p>-50%</p>
 	    <div class="inFieldContainer">
 	      <input type="text" id="revenue_in" class="inputField" value="0"/><span>%</span>
 	    </div>
