implemented fixed target option

--- a/debtgraph.html
+++ b/debtgraph.html
@@ -30,7 +30,7 @@
 		<option name="plan" id="radio_trump">Trump Plan</option>
 	      </select><br>
 	      <label for="target_fixed">Target Fixed?</label>
-	      <input type="checkbox" name="target_fixed" value="fixed">
+	      <input type="checkbox" name="target_fixed" id="target_fixed" value="fixed">
 	    </form>
 	  </div>
 	</div>
