--- a/debtgraph.html
+++ b/debtgraph.html
@@ -3,7 +3,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"/>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <link rel="stylesheet" href="debtgraph.css">
   <head>
@@ -15,28 +15,41 @@
       <h1>Debt Control Calculator</h1>
       <div id="left_panel">
 	<div id="results_area">
-	  <h4>Results</h4>
+	  <h3>Results</h3>
 	  <p>Under your plan, debt held by the public will be <span id="score">86%</span> <br>
 	    of GDP in 2026.</p>
 	</div>
-	<div id="base settings">
-	  <h4>Settings</h4>
+	<div id="settings">
+	  <h3>Settings</h3>
 	  <div class="input" id="plan_select_div">
-	    <form>
 	      <label for="plan_selector">Base Plan</label>
 	      <select name="plan_selector" id="plan_selector">
 		<option name="plan" id="radio_curr" selected>Current Law</option>
 		<option name="plan" id="radio_clinton">Clinton Plan</option>
 		<option name="plan" id="radio_trump">Trump Plan</option>
 	      </select><br>
-	      <label for="target_fixed">Target Fixed?</label>
-	      <input type="checkbox" name="target_fixed" id="target_fixed" value="fixed">
-	    </form>
+	      <div class="input" id="target_container">
+		<label for="target_fixed">Target Fixed?</label>
+		<input type="checkbox" name="target_fixed" id="target_fixed">
+	      </div>
+	      <h4>Exclusions</h4>
+	      <div class="input exclude" id="soc_sec_container">
+		<label for="soc_sec_exclude">Social Security:</label>
+		<input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude">
+	      </div>
+	      <div class="input exclude" id="medicare_container">
+		<label for="medicare_exclude">Medicare:</label>
+		<input type="checkbox" name="medicare_exlude" id="medicare_exclude">
+	      </div>
+	      <div class="input exclude" id="defense_container">
+		<label for="defense_exclude">Defense:</label>
+		<input type="checkbox" name="defense_exlude" id="defense_exclude">
+	      </div>
 	  </div>
 	</div>
 	<div id="slider_area">
 	  <div class="slideContainer">
-	    <h3>Spending</h3>
+	    <h4>Spending</h4>
 	    <p>+50%</p>
 	    <div id="spending_slider" class="inputSlider"> </div>
 	    <p>-50%</p>
@@ -45,7 +58,7 @@
 	    </div>
 	  </div>
 	  <div class="slideContainer">
-	    <h3>Revenue</h3>
+	    <h4>Revenue</h4>
 	    <p>+50%</p>
 	    <div id="revenue_slider" class="inputSlider"> </div>
 	    <p>-50%</p>
