implemented reset button

--- a/debtgraph.html
+++ b/debtgraph.html
@@ -49,7 +49,8 @@
 	</div>
 	<div id="slider_area">
 	  <div class="slideContainer">
-	    <h4>Spending</h4>
+	    <h4>Spending Cuts</h4>
+	    <h5>(% non-excluded)</h5>
 	    <p>+50%</p>
 	    <div id="spending_slider" class="inputSlider"> </div>
 	    <p>-50%</p>
@@ -58,7 +59,8 @@
 	    </div>
 	  </div>
 	  <div class="slideContainer">
-	    <h4>Revenue</h4>
+	    <h4>Revenue Gains</h4>
+	    <h5>(% total)</h5>
 	    <p>+50%</p>
 	    <div id="revenue_slider" class="inputSlider"> </div>
 	    <p>-50%</p>
@@ -66,6 +68,9 @@
 	      <input type="text" id="revenue_in" class="inputField" value="0"/><span>%</span>
 	    </div>
 	  </div>
+	</div>
+	<div id="reset_area">
+	  <input type="button" id="reset_button" value="Reset">
 	</div>
       </div>
       <div id="chart_area">
