--- a/debtgraph.html
+++ b/debtgraph.html
@@ -16,8 +16,8 @@
       <div id="left_panel">
 	<div id="results_area">
 	  <h3>Results</h3>
-	  <p>Under your plan, debt held by the public will be <span id="score">86%</span> <br>
-	    of GDP in 2026.</p>
+	  <p>Under your plan, debt held by the public will be
+	    <span id="score">86%</span> of GDP in 2026.</p>
 	</div>
 	<div id="settings">
 	  <h3>Settings</h3>
