--- a/debtgraph.html
+++ b/debtgraph.html
@@ -14,13 +14,13 @@
     <div id="main_content">
       <h1>Debt Control Calculator</h1>
       <div id="left_panel">
-	<div id="results_area">
+	<div id="results_area" class="topLevel">
 	  <h3>Results</h3>
 	  <p>Under your plan, debt held by the public will be <span id="score">86%</span> of GDP in 2026.</p>
 	  <p>You would <span id="spend_dir">cut</span> spending by <span id="spend_score">0%</span></p>
 	  <p>and <span id="rev_dir">increase</span> revenue by <span id="rev_score">0%</span></p>
 	</div>
-	<div id="settings">
+	<div id="settings" class="topLevel">
 	  <h3>Settings</h3>
 	  <div class="input" id="plan_select_div">
 	    <label for="plan_selector">Base Plan</label>
@@ -48,7 +48,7 @@
 	    <input type="checkbox" name="defense_exlude" id="defense_exclude">
 	  </div>
 	</div> 
-	<div id="slider_area">
+	<div id="slider_area" class="topLevel">
 	  <div class="slideContainer">
 	    <h4>Spending Cuts</h4>
 	    <h5>(% non-excluded)</h5>
@@ -70,7 +70,7 @@
 	    </div>
 	  </div>
 	</div>
-	<div id="reset_area">
+	<div id="reset_area" class="topLevel">
 	  <input type="button" id="reset_button" value="Reset">
 	</div>
       </div>
