further restyled charts

--- a/debtgraph.html
+++ b/debtgraph.html
@@ -5,7 +5,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <link rel="stylesheet" href="debtgraph.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+  <link type="text/css" rel="stylesheet" href="debtgraph.css">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Debt Control Calculator</title>
@@ -75,9 +76,11 @@
 	</div>
       </div>
       <div id="chart_area">
+	<h3>Ten Year Debt Projection</h3>
 	<div id="series_background">
 	  <div id="series_area"> </div>
 	</div>
+	<h3>Debt in 2026</h3>
 	<div id="end_background">
 	  <div id="end_area"> </div>
 	</div>
