updated fixed target support

--- a/trumpdebt.html
+++ b/trumpdebt.html
@@ -26,11 +26,11 @@
 	    </form>
 	  </div>
 	  <h4>Exclusions</h4>
-	  <div class="input exclude" id="soc_sec_container" style="background-color:yellow">
+	  <div class="input exclude" id="soc_sec_container">
 	    <label for="soc_sec_exclude">Social Security:</label>
 	    <input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude">
 	  </div>
-	  <div class="input exclude" id="medicare_container" style="background-color:yellow">
+	  <div class="input exclude" id="medicare_container">
 	    <label for="medicare_exclude">Medicare:</label>
 	    <input type="checkbox" name="medicare_exlude" id="medicare_exclude">
 	  </div>
