--- a/trumpdebt.html
+++ b/trumpdebt.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-  <link type="text/css" rel="stylesheet" href="singledebt.css">
-  <script type="text/javascript" src="trumpdata.js"> </script>
-  <script type="text/javascript" src="singledebt.js"> </script>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"/>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+    <link type="text/css" rel="stylesheet" href="singledebt.css" />
+    <script type="text/javascript" src="trumpdata.js"> </script>
+    <script type="text/javascript" src="singledebt.js"> </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Trump Debt Control Calculator</title>
   </head>
@@ -20,30 +20,30 @@
 	<div id="settings" class="topLevel">
 	  <h3>Settings</h3>
 	  <div class="input" id="target_container">
-	    <h4>Target</h4>
+	    <h4>Debt Target</h4>
 	    <form id="target_select" action="javascript:void(0);">
 	      Stabilize the Debt
-	      <input type="radio" name="target" value="stabilize" checked><br>
+	      <input type="radio" name="target" value="stabilize" checked="checked"/><br/>
 	      Balance the Budget
-	      <input type="radio" name="target" value="balance"><br>
-	      Choose My Own <input type="text" id="custom_target" value="67"/>%
-	      <input type="radio" name="target" value="custom"><br>
+	      <input type="radio" name="target" value="balance"/><br/>
+	      Choose My Own: <input type="text" id="custom_target" value="67"/>%
+	      <input type="radio" name="target" value="custom"/><br/>
 	      Not Fixed
-	      <input type="radio" name="target" value="free">
+	      <input type="radio" name="target" value="free"/>
 	    </form>
 	  </div>
 	  <h4>Exclusions</h4>
 	  <div class="input exclude" id="soc_sec_container">
 	    <label for="soc_sec_exclude">Social Security:</label>
-	    <input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude">
+	    <input type="checkbox" name="soc_sec_exlude" id="soc_sec_exclude"/>
 	  </div>
 	  <div class="input exclude" id="medicare_container">
 	    <label for="medicare_exclude">Medicare:</label>
-	    <input type="checkbox" name="medicare_exlude" id="medicare_exclude">
+	    <input type="checkbox" name="medicare_exlude" id="medicare_exclude"/>
 	  </div>
 	  <div class="input exclude" id="income_container">
 	    <label for="income_exclude">Income tax below $250k:</label>
-	    <input type="checkbox" name="income_exlude" id="income_exclude">
+	    <input type="checkbox" name="income_exlude" id="income_exclude"/>
 	  </div>
 	</div> 
 	<div id="slider_area" class="topLevel">
@@ -69,7 +69,7 @@
 	  </div>
 	</div>
 	<div id="reset_area" class="topLevel">
-	  <input type="button" id="reset_button" value="Reset">
+	  <input type="button" id="reset_button" value="Reset"/>
 	</div>
       </div>
       <div id="right_panel">
@@ -78,14 +78,14 @@
 	  <div id="series_background">
 	    <div id="series_area"> </div>
 	  </div>
-	  <p id="chart_caption">Note: Due to rounding, results will not always match targets</p>
+	  <p id="chart_caption">Note: Due to rounding, results may not match targets exactly.</p>
 	</div>
 	<div id="results_area" class="topLevel">
 	  <h3>Results</h3>
 	  <p>Spending cuts (% non-exempt spending)
 	    <span class="score" id="spend_score">0%</span></p>
 	  <p>Top marginal tax rate
-	    <span class="score" id="tax_score">25%</span></p><br>
+	    <span class="score" id="tax_score">25%</span></p><br/>
 	  <p>Debt held by public in 2026 (% GDP)
 	    <span class="score" id="debt_score">127%</span></p>
 	</div>
